--- a/views/poll.ejs
+++ b/views/poll.ejs
@@ -7,6 +7,12 @@
   <title>POLL</title>
 </head>
 <body>
- <%= metaData %> 
+  <h1>
+  This is GEB poll page, the callback meta is:
+  </h1>
+  <h2>
+    <%= metaData %> 
+  </h2>
+  <a href="http://localhost:3333">Travel meta page</a>
 </body>
 </html>
