--- a/views/meta.ejs
+++ b/views/meta.ejs
@@ -6,13 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>META page</title>
   <script>
-    const gebDomain = 'http://localhost:3000'
-    fetch(gebDomain + '/callback', {credentials:"include", body: new URLSearchParams({metaData: 'metaData'}), method:'POST'})
-    location.href = gebDomain
+    setTimeout(() => {
+      const gebDomain = 'http://localhost:3000'
+      fetch(gebDomain + '/callback', {credentials:"include", body: new URLSearchParams({metaData: 'metaData'}), method:'POST'})
+      location.href = gebDomain
+    }, 3000);
   </script>
 </head>
 <body>
-
-  
+  <h1>This is Family service page, we are auto post the {metaData: 'metaData'} in 3 second...</h1>
+  FYI:
+  <code>
+    setTimeout(() => {
+      const gebDomain = 'http://localhost:3000'
+      fetch(gebDomain + '/callback', {credentials:"include", body: new URLSearchParams({metaData: 'metaData'}), method:'POST'})
+      location.href = gebDomain
+    }, 3000);
+  </code>
 </body>
 </html>
